# SEM1-WPI-PETLIK

./: CMakeLists.txt  README.md  old_petlik.c  petlik.c  test.sh
Testy/: test10.in  test10.out  test3.out  test4.in  test4.out  test7.in  test8.in  test9.in
tests/: test2.in  test3.in  test5.in  test5.out  test6.in  test6.out  test7.out  test9.out
